<resources>
    <string name="app_name" translatable="false">CroudTrip!</string>
    <string name="app_icon_description">CroudTrip! Icon</string>
    <string name="error">Please try it again. Something went wrong</string>
    <string name="menu_join_trip">Join Trip!</string>
    <string name="menu_my_trip">My Trip!</string>
    <string name="menu_offer_trip">Offer Trip!</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_settings">Settings</string>
    <string name="login_email">Login with E-Mail</string>
    <string name="skip">Browse Trips without logging in</string>
    <string name="hint_email">Your E-Mail</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_password">Your Password</string>
    <string name="register">Create Account</string>
    <string name="registration_success">Registration success</string>
    <string name="registration_error_general">Sorry, there was an error, please retry</string>
    <string name="registration_error_conflict">E-Mail has already been registered</string>
    <string name="register_button">Sign up for CroudTrip!</string>
    <string name="email_invalid">Please enter a real E-Mail address</string>
    <string name="first_last_mandatory">First and Last names are mandatory fields</string>
    <string name="not_logged_in_register">Register</string>
    <string name="not_logged_in_cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">Forgot Your Password?</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_error_general">An unexpected error occurred, please retry</string>
    <string name="login_facebook_description">Login via Facebook</string>
    <string name="login_google_description">Login via Google+</string>
    <string name="logout">Logout</string>
    <string name="version_info">Version Info</string>
    <string name="used_libraries">Below is a list of all currently used external libraries:</string>
    <string name="license_info">
        The CroudTrip! application aims at revolutionizing the car-ride-sharing market with its easy,
        user-friendly and highly automated way of organizing shared Trips. Copyright (C) 2015 Nazeeh Ammari,
        Philipp Eichhorn, Ricarda Hohn, Vanessa Lange, Alexander Popp, Frederik Simon, Michael Weber \n
        This program is free software: you can redistribute it and/or modify it under the terms of the GNU
        Affero General Public License as published by the Free Software Foundation, either version 3 of
        the License, or (at your option) any later version. This program is distributed in the hope that it
        will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
        FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details. You
        should have received a copy of the GNU Affero General Public License along with this program.
        If not, see http://www.gnu.org/licenses/.\nThe
        artwork of this project is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike
        4.0 International license (CC BY-NC-SA 4.0). See https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode
        for more details.
    </string>
    <string name="used_artwork">
        In addition this project uses artwork provided by:\n\n
        Google Material Icons with some modifications (https://www.google.com/design/icons/)\n
        Android Holo Colors Generator (http://android-holo-colors.com/)\n
        The NFC Logo from Wikipedia with some modifications (https://de.wikipedia.org/wiki/Near_Field_Communication)
    </string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_address">Address</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_birthyear">Birth Year</string>
    <string name="profile_male">Male</string>
    <string name="profile_female">Female</string>
    <string name="profile_unknown"><i>unknown</i></string>
    <string name="profile_image_description">Profile image</string>
    <string name="profile_error_general">Your profile could not be loaded</string>
    <string name="title_activity_maps">Map</string>
    <string name="join_specify_start">Specify pick-up location</string>
    <string name="join_choose_destination">Enter destination here</string>
    <string name="join_change_destination">Change destination</string>
    <string name="join_max_waiting">Max waiting time (in minutes):</string>
    <string name="join_trip">Join Trip!</string>
    <plurals name="join_trip_results">
        <item quantity="one">We found %d ride for you</item>
        <item quantity="other">We found %d rides for you</item>
    </plurals>
    <string name="join_trip_results_costs">%s €</string>
    <string name="join_trip_results_distance_km">%d km</string>
    <string name="join_trip_results_distance_m">%d m</string>
    <string name="join_trip_results_duration_min">%dmin</string>
    <string name="join_trip_results_duration_hmin">%1$dh %2$dmin</string>
    <string name="join_trip_results_error">An error occurred when sending your request to the server. Please try again.</string>
    <string name="join_trip_results_waiting">We try our best to find Trips for you! Hang in there!</string>
    <string name="join_trip_results_join">i want to join!</string>
    <string name="join_trip_results_stop">Stop searching</string>
    <string name="join_trip_results_canceled">Searching for Trips stopped</string>
    <string name="join_trip_results_sending">You have contacted the driver&#8230; waiting for response</string>
    <string name="join_trip_results_pickup">Driver picks you up at approx.</string>
    <string name="join_trip_results_happy">Have a nice Trip!</string>
    <string name="join_trip_results_driverArrival">My driver is here</string>
    <string name="join_trip_results_reached">I´ve reached my destination</string>
    <string name="join_trip_results_left_Car">Left the car</string>
    <string name="join_trip_results_report">Report driver</string>
    <string name="join_trip_results_cancel">Cancel Trip!</string>
    <plurals name="join_trip_results_my_drivers">
        <item quantity="one">My Driver</item>
        <item quantity="other">My Drivers</item>
    </plurals>
    <string name="join_trip_results_price">%1$s.%2$s €</string>
    <string name="my_trip_passenger_error_no_trip">Error: You have currently no running Trip!</string>
    <string name="load_trip_passenger_failed">Loading your Trip! failed. Please try again.</string>
    <string name="join_trip_requests_no_requests">There are no join requests at the moment.</string>
    <string name="join_trip_requests_error">An error occurred when looking up you passengers. Please try again.</string>
    <string name="join_trip_requests_earnings">%1$s.%2$s €</string>
    <string name="join_trip_requests_diversion_loading">Div.: loading&#8230;</string>
    <string name="join_trip_requests_diversion_hmin">Div.: %1$s:%2$s h</string>
    <string name="join_trip_requests_diversion_min">Div.: %s min</string>
    <string name="join_trip_no_destination">Join Trip! failed: No destination location could be extracted.</string>
    <string name="offer_choose_destination">Specify start location</string>
    <string name="offer_change_destination">Change destination</string>
    <string name="offer_max_diversion">Max diversion (in km):</string>
    <string name="price">Price per km (in cent):</string>
    <string name="offer_trip">Offer Trip!</string>
    <string name="offer_trip_no_location">Offer Trip! failed: Your location is unknown.</string>
    <string name="offer_trip_no_destination">Offer Trip! failed: No destination location could be extracted.</string>
    <string name="duration_text">"Duration: %1$dh %2$dm %3$ds"</string>
    <string name="distance_text">"Distance: %1$.1fkm"</string>
    <string name="offer_trip_pick_up_passenger_default">A passenger</string>
    <string name="offer_trip_pick_up_passenger">%1$s is waiting for you at %2$s. Remember to pick him up!</string>
    <string name="offer_trip_pick_up_price">You may charge him %s €.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="navigation">Navigation</string>
    <string name="no_route_found">No route could be found for your request.</string>
    <string name="select_car">Select your default car</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="offer_trip_request_expired">Something went wrong, passenger could not be accepted</string>
    <string name="enable_gps_title">GPS not available</string>
    <string name="enable_gps_description">This application works best with GPS on your device enabled. Enable now?</string>
    <string name="enable_gps_ask">Please do not show again</string>
    <string name="enable_gps_ok">ok</string>
    <string name="enable_gps_cancel">cancel</string>
    <string name="join_trip_no_matches">No matches were found on your route</string>
    <string name="gpd_not_available">Sorry! We couldn´t find your current location!</string>
    <string name="redirect_to_placepicker">Tell us where you are</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="car_plate_hint">e.g 123456</string>
    <string name="car_type_hint">e.g Porsche 911</string>
    <string name="ask_register">We found a driver for you. But unfortunately you need to register for joining that Trip!</string>
    <string name="car_type_side">Car Type: \u0020</string>
    <string name="car_plate_side">Car Plate: \u0020</string>
    <string name="car_capacity_side">Car Capacity: \u0020</string>
    <string name="delete_vehicle_button">Delete This Car</string>
    <string name="vehicle_in_use">You cannot delete a car that you are currently having in your Trip! offer</string>
    <string name="new_car">Add new car</string>
    <string name="add_vehicle">Add a car</string>
    <string name="add_new_vehicle">Add to cars</string>
    <string name="vehicles_title">My Cars</string>
    <string name="no_car_plate_title">Add Car Info</string>
    <string name="no_car_plate_message">Your passengers cannot identify you without information about your car. Update information now?</string>
    <string name="no_vehicles_added">You have not added any cars</string>
    <string name="join_request_title">New join request!</string>
    <string name="joint_request_msg">%1$s wants to join your Trip!</string>
    <string name="trip_canceled_msg">Oh no, apparently your Trip! was canceled!</string>
    <string name="trip_canceled_by_passenger">Oh no, one of your passengers cancelled the Trip!</string>
    <string name="new_msg">New Message</string>
    <string name="join_request_sent">Your request has been sent to the driver. We will inform you as soon as the driver answers your request.</string>
    <string name="join_request_sending_error">There was an error sending your request.</string>
    <string name="join_request_accepted_title">Accepted Request</string>
    <string name="join_request_accepted_msg">Congratulations! %1$s is taking you to your destination.</string>
    <string name="join_request_declined_msg">Your request was declined by the driver.</string>
    <string name="join_request_declined_title">Declined request!</string>
    <string name="found_matches_title">New Message</string>
    <string name="found_matches_msg">There are new Trips available!</string>
</resources>