<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The CroudTrip! application aims at revolutionizing the car-ride-sharing market with its easy,
  ~ user-friendly and highly automated way of organizing shared Trips. Copyright (C) 2015  Nazeeh Ammari,
  ~  Philipp Eichhorn, Ricarda Hohn, Vanessa Lange, Alexander Popp, Frederik Simon, Michael Weber
  ~ This program is free software: you can redistribute it and/or modify  it under the terms of the GNU
  ~  Affero General Public License as published by the Free Software Foundation, either version 3 of the
  ~   License, or (at your option) any later version.
  ~  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~  even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU Affero General Public License for more details.
  ~  You should have received a copy of the GNU Affero General Public License along with this program.
  ~    If not, see http://www.gnu.org/licenses/.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include layout="@layout/toolbar" />

    <!-- Wrapper choose, login, register -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <!-- Wrapper register -->
        <FrameLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_vertical|center_horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/app_icon_description"
                                android:src="@drawable/icon_big"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="15dp"/>

                            <EditText
                                android:id="@+id/et_email"
                                android:width="200dp"
                                android:inputType="textEmailAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_email"/>

                            <EditText
                                android:id="@+id/et_firstName"
                                android:width="200dp"
                                android:inputType="textPersonName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_firstname"/>

                            <EditText
                                android:id="@+id/et_lastName"
                                android:width="200dp"
                                android:inputType="textPersonName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_lastname"/>

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:width="200dp"
                                android:id="@+id/et_password"
                                android:hint="@string/hint_password"/>

                            <Button
                                android:id="@+id/btn_register"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/register_button"/>

                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </RelativeLayout>

            <com.pnikosis.materialishprogress.ProgressWheel
                android:id="@+id/pb_register"
                android:layout_width="60dp"
                android:layout_height="60dp"
                wheel:matProg_barColor="@color/primary_light"
                wheel:matProg_progressIndeterminate="true"
                android:layout_gravity = "center_vertical|center_horizontal"
                android:visibility="gone"/>
        </FrameLayout>

        <!-- Wrapper login -->
        <FrameLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_vertical|center_horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_icon_description"
                            android:src="@drawable/icon_big"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="15dp"/>

                        <EditText
                            android:id="@+id/et_login_email"
                            android:width="200dp"
                            android:inputType="textEmailAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"/>

                        <EditText
                            android:id="@+id/et_login_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:width="200dp"
                            android:hint="@string/hint_password"/>

                        <TextView
                            android:id="@+id/tv_invalid_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:text="@string/invalid_login"
                            android:textColor="@color/error"
                            />

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"/>

                        <Button
                            android:id="@+id/btn_forgot_pwd"
                            android:layout_marginTop="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_pwd"
                            android:background="@android:color/transparent"/>
                        </LinearLayout>
                </ScrollView>
            </LinearLayout>
            <com.pnikosis.materialishprogress.ProgressWheel
                android:id="@+id/pb_login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                wheel:matProg_barColor="@color/primary_light"
                wheel:matProg_progressIndeterminate="true"
                android:visibility="gone"
                android:layout_gravity = "center_vertical|center_horizontal"/>
        </FrameLayout>


        <!-- Wrapper choose -->
        <RelativeLayout
            android:id="@+id/layout_choose"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:gravity="bottom"
                android:layout_margin="2dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_above="@id/skip"
                android:gravity="center">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_icon_description"
                            android:src="@drawable/icon_big"
                            android:layout_marginTop="7dp"
                            android:layout_marginBottom="15dp"/>

                        <Button
                            android:id="@+id/btn_login_with_email"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/login_email"
                            android:layout_marginBottom="5dp"/>

                        <ImageView
                            android:layout_marginBottom="5dp"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"
                            android:src="@drawable/loginwithfacebook"
                            android:contentDescription="@string/login_facebook_description"/>

                        <ImageView
                            android:layout_marginBottom="5dp"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/login_google_description"
                            android:src="@drawable/loginwithgoogle"/>

                        <Button
                            android:id="@+id/btn_register_email"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/register"/>

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>